// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TypeaheadInputSingle> Default story renders snapshot 1`] = `
<div
  style="display: flex; flex: 1; height: 100%; position: relative;"
>
  <input
    class="rbt-input-main form-control rbt-input"
    placeholder="This is a default input..."
  />
  <input
    aria-hidden="true"
    class="rbt-input-hint"
    readonly=""
    style="background-color: transparent; border-color: transparent; box-shadow: none; color: rgba(0, 0, 0, 0.54); left: 0px; pointer-events: none; position: absolute; top: 0px; width: 100%; border-style: inset inset inset inset; border-width: 2px 2px 2px 2px; line-height: normal; padding: 1px 1px 1px 1px;"
    tabindex="-1"
    value=""
  />
</div>
`;

exports[`<TypeaheadInputSingle> Disabled story renders snapshot 1`] = `
<div
  style="display: flex; flex: 1; height: 100%; position: relative;"
>
  <input
    class="rbt-input-main form-control rbt-input"
    disabled=""
    placeholder="This is a disabled input..."
  />
  <input
    aria-hidden="true"
    class="rbt-input-hint"
    readonly=""
    style="background-color: transparent; border-color: transparent; box-shadow: none; color: rgba(0, 0, 0, 0.54); left: 0px; pointer-events: none; position: absolute; top: 0px; width: 100%; border-style: inset inset inset inset; border-width: 2px 2px 2px 2px; line-height: normal; padding: 1px 1px 1px 1px;"
    tabindex="-1"
    value=""
  />
</div>
`;

exports[`<TypeaheadInputSingle> Invalid story renders snapshot 1`] = `
<div
  style="display: flex; flex: 1; height: 100%; position: relative;"
>
  <input
    class="rbt-input-main form-control rbt-input is-invalid"
    placeholder="This is an invalid input..."
  />
  <input
    aria-hidden="true"
    class="rbt-input-hint"
    readonly=""
    style="background-color: transparent; border-color: transparent; box-shadow: none; color: rgba(0, 0, 0, 0.54); left: 0px; pointer-events: none; position: absolute; top: 0px; width: 100%; border-style: inset inset inset inset; border-width: 2px 2px 2px 2px; line-height: normal; padding: 1px 1px 1px 1px;"
    tabindex="-1"
    value=""
  />
</div>
`;

exports[`<TypeaheadInputSingle> Large story renders snapshot 1`] = `
<div
  style="display: flex; flex: 1; height: 100%; position: relative;"
>
  <input
    class="rbt-input-main form-control rbt-input form-control-lg"
    placeholder="This is a large input..."
  />
  <input
    aria-hidden="true"
    class="rbt-input-hint"
    readonly=""
    style="background-color: transparent; border-color: transparent; box-shadow: none; color: rgba(0, 0, 0, 0.54); left: 0px; pointer-events: none; position: absolute; top: 0px; width: 100%; border-style: inset inset inset inset; border-width: 2px 2px 2px 2px; line-height: normal; padding: 1px 1px 1px 1px;"
    tabindex="-1"
    value=""
  />
</div>
`;

exports[`<TypeaheadInputSingle> Small story renders snapshot 1`] = `
<div
  style="display: flex; flex: 1; height: 100%; position: relative;"
>
  <input
    class="rbt-input-main form-control rbt-input form-control-sm"
    placeholder="This is a small input..."
  />
  <input
    aria-hidden="true"
    class="rbt-input-hint"
    readonly=""
    style="background-color: transparent; border-color: transparent; box-shadow: none; color: rgba(0, 0, 0, 0.54); left: 0px; pointer-events: none; position: absolute; top: 0px; width: 100%; border-style: inset inset inset inset; border-width: 2px 2px 2px 2px; line-height: normal; padding: 1px 1px 1px 1px;"
    tabindex="-1"
    value=""
  />
</div>
`;

exports[`<TypeaheadInputSingle> Valid story renders snapshot 1`] = `
<div
  style="display: flex; flex: 1; height: 100%; position: relative;"
>
  <input
    class="rbt-input-main form-control rbt-input is-valid"
    placeholder="This is a valid input..."
  />
  <input
    aria-hidden="true"
    class="rbt-input-hint"
    readonly=""
    style="background-color: transparent; border-color: transparent; box-shadow: none; color: rgba(0, 0, 0, 0.54); left: 0px; pointer-events: none; position: absolute; top: 0px; width: 100%; border-style: inset inset inset inset; border-width: 2px 2px 2px 2px; line-height: normal; padding: 1px 1px 1px 1px;"
    tabindex="-1"
    value=""
  />
</div>
`;

exports[`<TypeaheadInputSingle> WithHint story renders snapshot 1`] = `
<div
  style="display: flex; flex: 1; height: 100%; position: relative;"
>
  <input
    class="rbt-input-main form-control rbt-input"
    value="Ca"
  />
  <input
    aria-hidden="true"
    class="rbt-input-hint"
    readonly=""
    style="background-color: transparent; border-color: transparent; box-shadow: none; color: rgba(0, 0, 0, 0.54); left: 0px; pointer-events: none; position: absolute; top: 0px; width: 100%; border-style: inset inset inset inset; border-width: 2px 2px 2px 2px; line-height: normal; padding: 1px 1px 1px 1px;"
    tabindex="-1"
    value="California"
  />
</div>
`;
